--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@
       </ul>
     </nav>
   </header>
+
+  <div class="main-visual">
+    <section class="mv">
+      <h1 class="mv-title">Lorem Ipsum</h1>
+      <p class="mv-text">simply dummy text of the printing</p>
+    </section>
+  </div>
 </body>
 </html>
