--- a/index.html
+++ b/index.html
@@ -27,11 +27,23 @@
       </ul>
     </nav>
   </header>
-
   <div class="main-visual">
     <section class="mv">
       <h1 class="mv-title">Lorem Ipsum</h1>
       <p class="mv-text">simply dummy text of the printing</p>
+    </section>
+
+    <section class="Portfolio">
+      <h2 class="P-title">Portfolio</h2>
+      <p class="P-text">It is a long established fact that a reader will be distracted by the readable<br>contenct of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+      <div class="boxes clearfix">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
     </section>
   </div>
 </body>
