--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script src="https://kit.fontawesome.com/74c688a646.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title>WALS成果物</title>
 </head>
@@ -43,6 +44,39 @@
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
+      </div>
+    </section>
+
+    <section class="Feature">
+      <h2 class="F-title">Feature</h2>
+      <p class="F-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that has a more-or-less normal distribution of letters</p>
+      <div class="Strengths clearfix">
+        <div class="Strength">
+        	<i class="fas fa-code"></i>
+        	<h3 class="S-title">Strength1</h3>
+        	<p class="S-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
+        </div>
+        <div class="Strength">
+          <i class="fas fa-desktop"></i>
+        	<h3 class="S-title">Strength2</h3>
+        	<p class="S-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
+        </div>
+        <div class="Strength">
+        	<i class="fas fa-cogs"></i>
+        	<h3 class="S-title">Strength3</h3>
+        	<p class="S-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="Profile">
+        <h2 class="P-title">Profile</h2>
+        <p class="P-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+        <div class="P-box">
+          <img src="img/my-icon.jpg">
+          <h3 class=""
+        </div>
       </div>
     </section>
   </div>
