--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </section>
 
     <section class="Portfolio">
+    <div class="container">
       <h2 class="P-title">Portfolio</h2>
       <p class="P-text">It is a long established fact that a reader will be distracted by the readable<br>contenct of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
       <div class="boxes clearfix">
@@ -45,9 +46,11 @@
         <div class="box"></div>
         <div class="box"></div>
       </div>
+    </div>
     </section>
 
     <section class="Feature">
+    <div class="container">
       <h2 class="F-title">Feature</h2>
       <p class="F-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that has a more-or-less normal distribution of letters</p>
       <div class="Strengths clearfix">
@@ -67,16 +70,31 @@
         	<p class="S-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
         </div>
       </div>
+    </div>
     </section>
 
-    <section>
-      <div class="Profile">
+    <section class="Profile">
+      <div class="container">
         <h2 class="P-title">Profile</h2>
         <p class="P-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-        <div class="P-box">
-          <img src="img/my-icon.jpg">
-          <h3 class=""
+        <div class="Pr-box clearfix">
+          <div class="Pr-image">
+            <img src="img/my-icon.jpg" class="circle">
+          </div>
+          <div class="Pr-text_box">
+            <h3 class="Pr-title">MyName</h3>
+            <p class="Pr-text">Contrary to popular belief, Lorem Ipsum is not simply random<br>text. It has roots in a piece of classical Latin literature from 45<br>BC, making it over 2000 years old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College in Virginia, looked up<br>one of the more obscure Latin words, consectetur</p>
+            <h3 class="Pr-title2">MySkills</h3>
+            <p class="Pr-text">HTML/CSS,javaScript,JQuery,PhotoShop</p>
+          </div>
         </div>
+      </div>
+    </section>
+
+    <section class="Cntact">
+      <div class="container">
+        <h2 class="C-title">Contact</h2>
+        <p class="C-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
       </div>
     </section>
   </div>
