レイアウト完成

--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
       <div class="Strengths clearfix">
         <div class="Strength">
         	<i class="fas fa-code"></i>
-        	<h3 class="S-title">Strength1</h3>
-        	<p class="S-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
+        	<h3 class="St-title">Strength1</h3>
+        	<p class="St-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
         </div>
         <div class="Strength">
           <i class="fas fa-desktop"></i>
-        	<h3 class="S-title">Strength2</h3>
-        	<p class="S-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
+        	<h3 class="St-title">Strength2</h3>
+        	<p class="St-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
         </div>
         <div class="Strength">
         	<i class="fas fa-cogs"></i>
-        	<h3 class="S-title">Strength3</h3>
-        	<p class="S-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
+        	<h3 class="St-title">Strength3</h3>
+        	<p class="St-text">Contarary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece of classical Latin literature<br>from 45 BC, making it over 2000 years<br> old. Richard McClintock, a Latin<br>professor at Hampden-Sydney College<br>in Virgina, looked up one of the more<br>obscure Latin words, consectetur</p>
         </div>
       </div>
     </div>
@@ -91,12 +91,32 @@
       </div>
     </section>
 
-    <section class="Cntact">
-      <div class="container">
+    <section class="Contact">
+      <div class="container clearfix">
         <h2 class="C-title">Contact</h2>
         <p class="C-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+        <div class="contact-infomation">
+        <div class="C-box">
+          <h3 class="mail">Mail</h3>
+          <a  href="#" class="mail-address">xxx@xxx.com</a>
+          <h3 class="tel">Tel</h3>
+          <a href="#" class="number">000-0000-0000</a>
+        </div>
+        </div>
+        <div class="SNS">
+        <div class="S-box">
+          <h3 class="S-title">SNS</h3>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+        </div>
       </div>
     </section>
   </div>
+
+  <footer>
+    <p class="copyright">© 2017 WebCamp</p>
+  </footer>
 </body>
 </html>
