--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src="https://kit.fontawesome.com/74c688a646.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title>WALS成果物</title>
@@ -26,6 +27,11 @@
           <li class="nav-list">Contact</li>
         </a>
       </ul>
+      <div class="trigger">
+      	<span></span>
+      	<span></span>
+      	<span></span>
+      </div>
     </nav>
   </header>
   <div class="main-visual">
