ページ内リンク追加

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <img class="logo" src="img/logo.png">
       </a>
       <ul class="nav-bar">
-      	<a href="#">
+      	<a href="#Portfolio">
           <li class="nav-list">Portfolio</li>
         </a>
-        <a href="#">
+        <a href="#Feature">
           <li class="nav-list">Feature</li>
         </a>
-        <a href="#">
+        <a href="#Profile">
           <li class="nav-list">Profile</li>
         </a>
-        <a href="#">
+        <a href="#Contact">
           <li class="nav-list">Contact</li>
         </a>
       </ul>
@@ -40,7 +40,7 @@
       <p class="mv-text">simply dummy text of the printing</p>
     </section>
 
-    <section class="Portfolio">
+    <section class="Portfolio" id="Portfolio">
     <div class="container">
       <h2 class="P-title">Portfolio</h2>
       <p class="P-text">It is a long established fact that a reader will be distracted by the readable<br>contenct of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
@@ -55,7 +55,7 @@
     </div>
     </section>
 
-    <section class="Feature">
+    <section class="Feature" id="Feature">
     <div class="container">
       <h2 class="F-title">Feature</h2>
       <p class="F-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that has a more-or-less normal distribution of letters</p>
@@ -79,7 +79,7 @@
     </div>
     </section>
 
-    <section class="Profile">
+    <section class="Profile" id="Profile">
       <div class="container">
         <h2 class="P-title">Profile</h2>
         <p class="P-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-    <section class="Contact">
+    <section class="Contact" id="Contact">
       <div class="container clearfix">
         <h2 class="C-title">Contact</h2>
         <p class="C-text">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.<br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
